# ml-llm-dola

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: hallucination_categories.jsonl  sample_questions.jsonl
scripts/: eval.sh  main.sh  r_llama.sh  r_qwen.sh  visualize.sh
src/: custom_dataset.py  evaluation.py  inference.py  llm_judge.py
src/custom_generate/: generate.py
src/utils/: visualize.py
