[project]
name = "src"
version = "0.1.0"
authors = [{ name = "Kuriko Iwai", email = "krik8235@gmail.com" }]
description = "dola"
readme = "README.md"
requires-python = "==3.12.*"
license = {file = "LICENSE"}
keywords = ["large language model", 'decoding methods', 'llm', 'dola', 'decoding by contrasting layers']
classifiers = ["Programming Language :: Python"]
dependencies = [
    "bert-score>=0.3.13",
    "evaluate>=0.4.6",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.urls]
Homepage = "https://kuriko-iwai.com"
Repository = "https://github.com/krik8235/ml-llm-dola"
Issues = "https://github.com/krik8235/ml-llm-dola/issues"

[project.optional-dependencies]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.uv]
package = true

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [""]

[dependency-groups]
dev = [
    "accelerate>=1.12.0",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]
